objects/JBCXM__Subscription_Frequency__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Daily__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Never__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Real_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscription_Frequency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Weekly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription Frequency</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__UserID__c</columns>
        <columns>JBCXM__Daily__c</columns>
        <columns>JBCXM__Never__c</columns>
        <columns>JBCXM__Real_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subscription Frequency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Frequency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>